# Manzil---Find-more-than-a-Destination

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  scratch.txt  scratch2.txt
backend/: .env.example  .gitignore  envFile  package-lock.json  package.json  requirements.txt  schema.sql  travel_planner.db
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  itinerary.py  profile.py
backend/app/services/: ai_planner.py  auth.py  chat_service.py  db_service.py  groq_service.py  supabase_service.py  weather.py
backend/prisma/: schema.prisma
backend/src/: index.js
backend/src/jobs/: scheduler.js
backend/src/middleware/: auth.js
backend/src/routes/: analytics.js  auth.js  mvp.js  notifications.js  opportunities.js  profile.js  resume.js  whatsapp.js
backend/src/services/: gemini.js  matchingEngine.js  resumeParser.js  searchEngine.js  whatsapp.js
backend/src/utils/: logger.js  prisma.js  supabase.js
database/: SETUP.sql  chat_schema.sql  expenses_schema.sql  favorites_schema.sql  schema.sql
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  types.ts
frontend/src/components/: ActivityCard.tsx  AuthScreen.tsx  BudgetBreakdown.tsx  CurrencySelector.tsx  DayCard.tsx  EditActivityModal.tsx  ExpenseTracker.tsx  ExploreScreen.tsx  ItineraryDetails.tsx  MapRegion.tsx  Navbar.tsx  Sidebar.css  (+4 more)
supabase/migrations/: 001_initial_schema.sql
(+29 files in other folders)
